# shioripy

./: .env.template  manage.py  pyproject.toml  tox.ini
aaa/: schema.py
aaa/migrations/: 0001_initial.py
aaa/tests/: conftest.py  test_schema.py
series/: models.py  schema.py  tests.py
series/migrations/: 0001_initial.py
series/tests/: conftest.py  test_models.py  test_schema.py
shioripy/: asgi.py  settings.py  urls.py  wsgi.py
