[tool.poetry]
name = "shioripy"
version = "0.1.0"
description = ""
authors = ["hikinit <hikinit@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.5"
django-environ = "^0.4.5"
django-countries = "^7.0"
graphene-django = {version = "^2.15.0", allow-prereleases = true}

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.2.1"
isort = "^5.7.0"
pytest-django = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
